samples/_failures_safe/1761259980_c8068d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0af5bff1.c: In function ‘main’:
./samples/SAFE/__tmp_0af5bff1.c:160:30: error: expected ‘)’ at end of input
  160 |     buffer_free(&decompressed
      |                ~             ^
      |                              )
./samples/SAFE/__tmp_0af5bff1.c:160:5: error: expected declaration or statement at end of input
  160 |     buffer_free(&decompressed
      |     ^~~~~~~~~~~
